<resources>
    <string name="app_name">AppStory</string>
    <string name="truy_n_88">Story</string>
    <string name="x_p_h_ng">Xếp Hạng</string>
    <string name="top_truy_n">Top Truyện</string>
    <string name="th_lo_i">Thể Loại :</string>
    <string name="tac_gia">Tác giả :</string>
    <string name="th_loai">Thể Loại</string>
    <string name="book_mark">  Book Mark</string>
    <string name="lich_su">Lịch sử          </string>
    <string name="koa_hoc">Khoa học viễn tưởng</string>
    <string name="love_hai">Tình yêu</string>
    <string name="hai">Hài hước         </string>
    <string name="kinh_di">Kinh dị</string>
    <string name="phieu_luu">Phiêu lưu </string>
    <string name="trinh_tham">Trinh thám   </string>
    <string name="vo_hiep">Võ hiệp</string>
    <string name="hanh_dong">Hành động </string>
    <string name="truyen_ky">Truyền kỳ  </string>
    <string name="vien_tuong">Viễn tưởng</string>
    <string name="gia_dinh">Gia đình  </string>
    <string name="tam_ly">Tâm lý </string>
    <string name="school">Học đường</string>
    <string name="ky_ao">Kỳ ảo</string>
    <string name="kich_tinh">Kịch tính  </string>
    <string name="toi_pham">Tội phạm   </string>
    <string name="hoi_hop">Hồi hộp </string>
    <string name="mao_hiem">Mạo hiểm </string>
    <string name="truy_n_hay"># TRUYỆN HAY</string>
    <string name="truy_n"> truyện</string>
    <string name="luot_xem">Lượt xem : </string>
    <string name="c_nhi_u_nh_t"># ĐỌC NHIỀU NHẤT</string>
    <string name="chuy_n_m_c"># CHUYÊN MỤC</string>
    <string name="truy_n_c_a_b_n"># TRUYỆN CỦA BẠN</string>
    <string name="truy_n_m_i_c_p_n_t">Truyện mới cập nhật</string>
    <string name="danh_m_c"> Danh mục </string>
    <string name="truy_n_full">Truyện full</string>
    <string name="ng_n_t_nh_">Ngôn Tình </string>
    <string name="introduce_content">Đây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá béĐây là một thế giới yêu ma tiềm tàng, vạn tộc san sát, hơi không chú ý, chính là cá lớn nuốt cá bé. Nhưng tất cả những điều này không liên quan đến Lý Đán, bởi vì miễn là kỷ luật tự giác, có thể nhận được phần thưởng tương ứng, sau đó trở nên hoàn hảo vô địch!Đinh: Chúc mừng túc chủ kiên trì vận động mỗi ngày, đạt được một bộ công pháp luyện thể đỉnh cấp.đạt được một bộ công pháp luyện thể đỉnh cấp.Đinh: Tuyên bố nhiệm vụ tự kỷ luật mới, kiên trì một tháng thổ lộ mỹ nữ xinh đẹp trong tông môn, thưởng cho một thân thiên phú thần bí.</string>
    <string name="ti_n_hi_p_hot">Tiên hiệp hot</string>
    <string name="dam_my">Đam Mỹ</string>
    <string name="kiem_hiep">Kiếm Hiệp</string>
    <string name="anime_hot">Anime hot</string>
    <string name="duglnv">DUGLNV</string>
    <string name="black_clover">Black Clover</string>
    <string name="story_full">Story full</string>
    <string name="story_anime">Story anime</string>
    <string name="story_first_half">Story first half</string>
    <string name="story_love_language">Story love language</string>
    <string name="story_new_update">Story new update</string>
    <string name="read_story">Read story</string>
    <string name="view">View</string>
    <string name="chapter_number">Chapter number</string>
    <string name="author">Author</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="introduce">Introduce</string>
    <string name="describe">Describe</string>
    <string name="dunglv">DungLv</string>
    <string name="t_m_d_ng">Tạm dừng</string>
    <string name="full">Full</string>
    <string name="ang_ti_n_h_nh">Đang tiến hành</string>
    <string name="ho_n_th_nh">Hoàn thành</string>
    <string name="new_story_update">New story update</string>
    <string name="anime_story">Anime story</string>
    <string name="first_hafs_story">First hafs story</string>
    <string name="love_language_story">Love language</string>
    <string name="dragon_ball">Dragon ball</string>
    <string name="ch_ng_1_qu_m_s_m_ch_p">Chương 1: Quả đấm sấm chớp</string>
    <string name="ch_ng_1_die_i_die_l_i">Chương 1 </string>
    <string name="content">Phương Nguyên, ngoan ngoãn giao ra Xuân Thu Thiền,ta cho ngươi chết một cách thoải mái!Phương lão ma, ngươi đừnghòng phản kháng, hôm nay chúng ta các phái chính đạo liên hợp lại,nhất định phải phá ma quật của ngươi. Nơi này sớm đã bày thiên lađịa võng, lần này ngươi nhất định đầu thân khác chỗ!Phương Nguyênngươi là đồ ma đầu chết tiệt, ngươi vì luyện thành Xuân Thu Thiền,giết ngàn vạn mạng người. Ngươi đã phạm phải tội nghiệt đầy trời,tội không thể tha, tội lỗi chất chồng! Ma đầu, ba trăm năm trướcngươi làm nhục ta, cướp đi tấm thân trong sạch của ta, giết sạchcả nhà ta, giết cửu tộc của ta. Từ thời khắc đó, ta hận không th ăn thịt ngươi, uống máu ngươi! Hôm nay, ta muốn ngươi sống khôn bằng chết!! Phương Nguyên mặc một bộ trường bào xanh biếc rách nát tóc tai bù xù, cả người đẫm máu, nhìn bốn phía xung quanh. Gió nú thổi huyết bào phất phơ, giống như chiến kì tung bay phần phật Máu đỏ tươi, từ mấy trăm miệng vết thương trên người tuôn ra ngoài Chỉ đứng trong chốc lát, dưới chân Phương Nguyên đã tích tụ một vũn máu loãng lớn.Quần địch bao vậy, đã sớm không có đường sống.Đại cục đã định, hôm nay hẳn phải chết không nghi ngờ.Phương Nguyên thấy rõ thế cục, nhưng mà mặc dù tử vong đến,hắn vẫn mặt không đổi sắc như trước, vẻ mặt bình thản.Ánh mắt hắn sâu thẳm, như một cái giếng cổ, trước sau như một,Bọn họ không hề động thủ, cũng vì e ngại Phương Nguyên sắp chết phản công.Cứ căng thẳng như vậy mà giằng co ba canh giờ, mặt trời chiều ngả về tây, ánh sáng còn lại của mặt trời nhen nhóm bên sườn núi mà ánh chiều chiếu vào, trong một lúc sáng lên như lửa đốt.</string>
    <string name="story_save">Story save</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="story_max_view">Story max view</string>
    <string name="rank">Rank</string>
    <string name="top_story">Top truyện </string>
    <string name="love">Love</string>
    <string name="first_half">First half</string>
    <string name="story_new">Story New</string>
    <string name="love_language">Love Language</string>
    <string name="t_ng_s_ch_ng">Tổng số chương :</string>
    <string name="new_story">New story</string>
    <string name="search">Search</string>
    <string name="truy_n_c_nhi_u_nh_t_trong_th_ng">TRUYỆN ĐỌC NHIỀU NHẤT TRONG THÁNG</string>
    <string name="t_m_ki_m">Tìm kiếm</string>
    <string name="l_u_truy_n">Lưu truyện</string>
    <string name="x_a_bookmark">Xóa BookMark</string>
    <string name="no_data">No data</string>
</resources>