<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0dp">

                <TextView
                    android:id="@+id/tv_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="@string/ch_ng_1_die_i_die_l_i"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="@dimen/dimen_24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_15dp"
                    android:paddingStart="@dimen/dimen_10dp"
                    android:fontFamily="@font/fonts_light"

                    android:paddingTop="@dimen/dimen_20dp"
                    tools:text="@string/content"
                    android:textSize="@dimen/dimen_20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_chapter"

                    tools:ignore="RtlSymmetry" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_10dp"
            android:src="@drawable/ic_back"
            android:padding="@dimen/dimen_6dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/custom_ripple_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_15dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_bold"
            android:layout_marginEnd="@dimen/dimen_10dp"
            app:layout_constraintRight_toRightOf="parent"
            android:maxLines="1"
            android:text="@string/dragon_ball"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/im_back"
            app:layout_constraintLeft_toRightOf="@id/im_back"
            app:layout_constraintTop_toTopOf="@id/im_back" />


        <View
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="#CC000000"
            app:layout_constraintLeft_toLeftOf="@id/im_back"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>