<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/im_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_delete_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/x_a_bookmark"
                    android:visibility="visible"
                    android:textSize="@dimen/dimen_18sp"
                    android:foreground="@drawable/custom_ripple_rectangle"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_color_add_book_mark"
                    android:padding="@dimen/dimen_10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_list_book_mark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_story_bookmark"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@id/tv_delete_book"
                    android:padding="@dimen/dimen_10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_delete_book"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/dimen_6dp"
            android:background="@drawable/custom_ripple_back"
            android:src="@drawable/ic_back"
            android:alpha="0.7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />
        <TextView
            android:id="@+id/tv_check_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/no_data"
            android:visibility="invisible"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/tv_name"
            android:fontFamily="@font/nunito_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_10dp"
            android:text="@string/book_mark"
            android:textSize="@dimen/dimen_24sp"
            app:layout_constraintBottom_toBottomOf="@id/im_back"
            app:layout_constraintLeft_toRightOf="@id/im_back"
            app:layout_constraintTop_toTopOf="@id/im_back" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>